# HECE

./: .env  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  checklist.md  pyproject.toml  requirements.txt
docs/: PROJECT_CONTEXT.md  PROJECT_IDENTITY.md  architecture.md  constitution.md  glossary.md  philosophy.md  vision.md
docs/specifications/: DomainLanguage.md  GoalAnalysis.md  GoalInterpreter.md
scripts/: project_report.ps1
src/hece/: __init__.py  agents.py  constraints.py  hypothesis.py  inference.py  interpreter.py  knowledge.py  main.py  paper.py  report.py  simulation.py  tools.py
src/hece/core/: __init__.py
src/hece/core/models/: __init__.py  base.py
tests/unit/: test_agents.py  test_constraints.py  test_hypothesis.py  test_interpreter.py  test_knowledge.py  test_paper.py  test_simulation.py  test_tools.py
