[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hece"
version = "0.1.0"
description = "Hypothesis & Creativity Engine"
authors = [{name = "HECE Project"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]